# AiZO_Projekt2

./: .gitignore  CMakeLists.txt  graph.txt  main.cpp
algorithms/: BellmanFord.cpp  BellmanFord.h  Dijkstra.cpp  Dijkstra.h  FordFulkerson.cpp  FordFulkerson.h  Kruskal.cpp  Kruskal.h  Prim.cpp  Prim.h
data/: graph.txt
datasets/: CA-GrQc-converted.txt  CA-GrQc_connected_directed_weighted.txt  CA-GrQc_connected_undirected_weighted.txt  CA-GrQc_directed_weighted.txt  CA-GrQc_undirected_weighted.txt
research/: GraphGenerator.cpp  GraphGenerator.h  Timer.cpp  Timer.h
results/: benchmark.csv  external_dataset_global_measurements.csv  networkx_comparison.txt  output.txt  output_mf.txt  output_sp.txt  snap_algorithms.csv  test_stage7.csv
scripts/: compare_networkx.py  convert_snap.py  make_charts.py  make_snap_chart.py  prepare_snap_dataset.py  run_external_datasets_collect_results_and_ram.py
structures/: DynamicArray.h  Edge.cpp  Edge.h  FileLoader.cpp  FileLoader.h  IGraph.h  LinkedList.h  ListGraph.cpp  ListGraph.h  MatrixGraph.cpp  MatrixGraph.h
